system/css/seotoaster.css
/* ... */
.seotoaster#seotoaster-cpanel ul li ul li.cpanelsubtitle {
 background-color: #E1E1E1;
 color: #3C3C3C;
 font-size: 11pt;
 font-weight: bold;
 border-bottom: none;
 padding: 2px 0px 2px 4px;
 width:196px;
}

.seotoaster#seotoaster-cpanel ul li{
	list-style: none;
	width: 200px;
	margin: 0px;
}

#seotoaster-logowrap {
	background:#fff;
	text-align:center;
}
#seotoaster-logowrap img { max-width:200px; }



/*========= EDIT CONTENT ===========*/
.seotoaster #btn-submit {
	position: absolute;
	bottom: 5px;
	right: 3px;
}

.seotoaster div.header label { /*publish or not form in header*/
	color: #ececec;
	background-color:#666;
	float:left;
	padding:0px 8px;
}
.seotoaster div.header input[type=text] {
	font-size:10pt;
	padding: 1px 0px;
	margin:0;
}

.seotoaster .above-editor-links #links {
	padding: 0px 0px 5px 0px;
}

.seotoaster .above-editor-links #links a {
	text-transform: uppercase;
	font-size: 10px;
	color: #555;
}

.seotoaster .above-editor-links {
	color:#555;
	font-size:11pt;
/*	text-align:right;*/
}
.seotoaster textarea#editcontent {
	margin:0;
	padding:5px;
	height:100%;
}

.seotoaster div#tabs {
	font-size: 14px;
	padding: 0px;
	height: 555px;
}

.seotoaster div#tabs div.ui-tabs-panel {
	padding: 5px 10px !important;
}

.seotoaster div#tabs #adminthingsviewer div.button {
	border-radius: 0px;
	padding: 5px 5px 5px 25px;
}


.seotoaster div#tabs #adminthingsviewer div.show_div {
	background: #cecece;
	padding: 10px 3px 5px 3px;
	max-height: 210px;
	overflow-y: scroll;
}

.seotoaster ul.editortabs {
	margin:0;
	padding:0;
}
.seotoaster ul.editortabs li {
	background-color:#eee;
	float:left;
	list-style:none;
	padding:2px 5px 2px 5px;
	border-right:1px solid #999;
	border-top:1px solid #fff;
}
.seotoaster ul.editortabs li a {
	font-size:10pt;
	color:#666;
	font-weight:bold;
}
.seotoaster ul.editortabs li:hover { background: #fff; }
.seotoaster ul.editortabs li.active {
	background: #fff;
	border-bottom: 1px solid #fff;
}

/*========= WIDGET MAKER =================*/

.seotoaster div#tabs #adminthingsviewer div.show_div#widgets_maker {
	background: #fff;
	border-left: 1px solid #aaa;
	border-right: 1px solid #aaa;
}

.seotoaster div#tabs #adminthingsviewer div.show_div#widgets_maker .wmc-block {
	overflow: hidden;
	min-height: 100px;
	margin-bottom: 10px;
}

.seotoaster div#tabs #adminthingsviewer div.show_div#widgets_maker .wmc-block .wmc-row {
	overflow: hidden;
	min-height: 25px;
}

.seotoaster div#tabs #adminthingsviewer div.show_div#widgets_maker .wmc-label,
.seotoaster div#tabs #adminthingsviewer div.show_div#widgets_maker .wmc-label-flat {
	float: left;
	width: 110px;
	font-size: 12px;
	margin: 3px;
	padding: 7px 4px;
}

.seotoaster div#tabs #adminthingsviewer div.show_div#widgets_maker .wmc-label-flat {
	float: none;
	width: 100%;
}

.seotoaster div#tabs #adminthingsviewer div.show_div#widgets_maker .wmc-input,
.seotoaster div#tabs #adminthingsviewer div.show_div#widgets_maker .wmc-input-flat {
	font-size: 12px;
	float: left;
	width: 125px;
	margin-right: 3px;
}

.seotoaster div#tabs #adminthingsviewer div.show_div#widgets_maker .wmc-input-flat {
	float: none;
	width: 98%;
}

.seotoaster div#tabs #adminthingsviewer div.show_div#widgets_maker input.wmc-input[type=checkbox] {
	margin-top: 10px;
}

.seotoaster div#tabs #adminthingsviewer div.show_div#widgets_maker .wmc-submit {
	background: none repeat scroll 0 0 #7C7C7C;
    border-radius: 4px 4px 4px 4px;
	-moz-border-radius: 4px 4px 4px 4px;
	-webkit-border-radius: 4px 4px 4px 4px;
    color: #EEEEEE;
    cursor: pointer;
    font-size: 14px;
	border: none;
    font-weight: bold;
    padding: 2px 20px;
}

.seotoaster div#tabs #adminthingsviewer div.show_div#widgets_maker h3 {
	padding: 8px;
	background: #666;
	color: #fff;
}

.seotoaster div#tabs #adminthingsviewer div.show_div#widgets_maker .wmc-error {
	border: 1px solid #ff0000;
}

/*========= AND AND EDIT TEMPLATE ===========*/
.seotoaster div#templatelist {
	position: absolute;
	background-color: #BDE6F1;
}
.seotoaster div#templatelist div.template_preview {
	position: relative;
}
.seotoaster div#templatelist div.template_preview {
	border: 1px solid #000;
	-moz-border-radius:8px;
	-webkit-border-radius:8px;
	border-radius:8px;
	text-align: center;
	cursor: pointer;
	margin: 2px 0 3px;
}
.seotoaster div#templatelist div.template_preview .template_delete {
	display: inline;
}
.seotoaster div#templatelist div.template_preview .template_name {
	line-height: 30px;
	background-color: #666666;
    color: #FFFFFF;
    margin: 0 0 10px;
	overflow: hidden;
	text-overflow: ellipsis;
	-o-text-overflow: ellipsis;
	-icab-text-overflow: ellipsis;
	-khtml-text-overflow: ellipsis;
	-moz-text-overflow: ellipsis;
	-webkit-text-overflow: ellipsis;
	position: absolute;
	bottom: 0;
	width: 100%;
}
.seotoaster div#templatelist div.template_preview .template_name:hover {
	-o-text-overflow: inherit;
    text-overflow: inherit;
    overflow: visible;
}
.seotoaster div.largebutton{
	-moz-border-radius:8px;
	-webkit-border-radius:8px;
	border-radius:8px;
	background-color:#690;
	text-align:center;
}
.seotoaster div.largebutton:hover{
	background-color:#6C3;
}
.seotoaster div.largebutton a{
	color:#fff;
	font-weight:bold;
	display:block;
	padding:20px 10px;

}


.seotoaster .red { background-color:red; }
.seotoaster .blue { background-color:blue; }

/*=========== Organize Pages ==============*/
.seotoaster span.catmove {
	position:relative;
	text-indent:3px;
	padding:2px;
	display:block;
	overflow:hidden;
	white-space:nowrap;
	-moz-border-radius:0px 4px 0px 0px;
	-webkit-border-radius:0px 4px 0px 0px;
	border-radius:0px 4px 0px 0px;
}
.seotoaster span div.cat-tools {
	position:absolute;
	right:0px;
	top:0px;
	height:100%;
	padding:2px 4px 6px 2px;
	border-left:4px solid #fff;
	background:#fff;
	vertical-align:middle;
	background:url(../images/bg-strip.png);
	-moz-border-radius:0px 4px 0px 0px;
	-webkit-border-radius:0px 4px 0px 0px;
	border-radius:0px 4px 0px 0px;
}
/* ... */

